2006-11-24  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/runner.py (Options.subCommands): rename
	'buildbot sighup DIR' to 'buildbot reconfig DIR', but keep
	'sighup' as an alias.
	* buildbot/scripts/reconfig.py (Reconfigurator): enhance the
	reconfig command to follow twistd.log and print all of the lines
	from the start of the config-file reload to its completion. This
	should make it a lot easier to discover bugs in the config file.
	Use --quiet to disable this behavior. This addresses half of
	SF#1517975, the other half will be to add this same utility to
	'buildbot start' and 'buildbot restart'.
	* docs/buildbot.texinfo (Loading the Config File): same
	(Shutdown): same

	* buildbot/interfaces.py (IBuilderControl.forceBuild): remove this
	method, it has been deprecated for a long time. Use
	IBuilderControl.requestBuild instead.
	* buildbot/process/builder.py (BuilderControl.forceBuild): remove
	* buildbot/master.py (BotPerspective.perspective_forceBuild): same
	* buildbot/slave/bot.py (Bot.debug_forceBuild): same
	* buildbot/test/test_control.py (Force.testForce): same
	* buildbot/test/test_run.py: use requestBuild instead

	* buildbot/clients/debug.py: replace 'Force Build' button with
	'Request Build' (which just adds one to the queue), add Ping
	Builder, add branch/revision fields to Request Build.
	* buildbot/clients/debug.glade: same
	* buildbot/master.py: update interface to match. This creates an
	incompatibility between new debugclients and old buildmasters.

	* buildbot/process/builder.py (Builder._attached): delay the call
	to maybeStartBuild for a reactor turn, to avoid starting a build
	in the middle of a reconfig (say, if the new Builder uses a new
	slave which is already connected).

2006-11-23  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_transfer.py: appease pyflakes
	* buildbot/test/test_steps.py: same

	* buildbot/test/test_bonsaipoller.py: remove the 'import *' that
	keeps pyflakes from finding undefined names
